[project]
name = "blog"
version = "0.1.0"
description = ""
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.29.0"
ruff = "^0.4.4"
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
blog = "blog.main:main"
migration = "blog.main:migrate"
